--- a/TopDownDream/Config/DefaultInput.ini
+++ b/TopDownDream/Config/DefaultInput.ini
@@ -80,8 +80,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ZoomOut",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
-+ActionMappings=(ActionName="CheatCamRota",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=²)
++ActionMappings=(ActionName="CheatCamDetach",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=²)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTriggerAxis)
++ActionMappings=(ActionName="CheatCamAttach",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Ampersand)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
