--- a/TopDownDream/Config/DefaultInput.ini
+++ b/TopDownDream/Config/DefaultInput.ini
@@ -79,6 +79,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Right)
++ActionMappings=(ActionName="Cheat",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=Gamepad_LeftX)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Q)
